54 code smell fixed